--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 form.search-form {
   width: 100%;
 }
+
+.main-footer {
+  position: fixed;
+  bottom: 0;
+  height: 50px;
+  width: 100%;
+  text-align: center;
+}
